# vscode-master-key

./: .eslintrc.json  .gitignore  .prettierrc.js  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  Untitled-1.md  _typos.toml  breaking_changes.md  debug-profile.code-profile  errors.txt  esbuild.mjs  eslint.config.mjs  mise.toml  notes.md  npm-run.sh  old_package.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  scratch.md  tsconfig.json  tsconfig.ux.json  vimdocs.txt  wdio.conf.mts  webpack.config.js
.github/workflows/: ci.yml  docs.yml  integration-tests.yml  release.yml  unit-tests.yml
docs/: .gitignore  .simple-src-docs.config.toml  design_journal.md  guide.md  index.md
docs/.vitepress/: config.mts
docs/bindings/: bind.md  default.md  header.md  index.md  kind.md  mode.md
docs/commands/: index.md
docs/templates/: guide.md
docview/: script.js  style.css
extension-profiles/: README.md  profile-key-presses.js
logo/: logo.afdesign
old_format/: larkin.toml  parsing.ts
presets/: franklin.toml  larkin.toml  larkin_layout.toml  reduced.toml  vim.toml
src/docs/: guide.md  index.md
src/extension/: expressions.ts  fast-text-encoding.t.ds  index.ts  key-utils.ts  safe-expression.d.ts  state.ts  string.prototype.replaceall.d.ts  utils.ts
src/presets/: larkin.toml  larkinTest.toml  vim.toml
src/rust/parsing/: Cargo.toml  errors.txt  log.txt
src/rust/parsing/coverage/: parsing.info  parsing.profdata
src/rust/parsing/src/: CPU-20251014T121114.750Z.cpuprofile.txt  bind.rs  command.rs  define.rs  docs.rs  error.rs  expression.rs  file.rs  kind.rs  lib.rs  main.rs  mode.rs  util.rs  value.rs  variable.rs
src/rust/parsing/src/bind/: command.rs  foreach.rs  prefix.rs  validation.rs
src/rust/parsing/src/command/: constraints.rs  foreach.rs  mod.rs  validation.rs
src/rust/parsing/src/expression/: value.rs
src/rust/parsing/src/test_files/: output.md  text-docs.md  text-docs.toml
src/test/: tsconfig.json
src/web/: captureKeys.ts  commands.ts  config.ts  expressions.ts  extension.ts  jse-eval.d.ts  keybindingParsing.ts  keybindingProcessing.ts  keybindings.ts  safe-expression.d.ts  searching.ts  state.ts  utils.ts  (+1 more)
test/: tsconfig.json
uxtest/: bind.toml  settings.json
(+134 files in other folders)
