[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["release_max_level_error"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
test-log = "0.2.18"
thiserror = "2.0.12"
toml = "0.8.23"
validator = { version = "0.20.0", features = ["derive"] }
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib"]
