[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
indexmap = { version = "2.10.0", features = ["serde"] }
js-sys = "0.3.77"
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["release_max_level_error"] }
regex = "1.11.1"
rhai = { version = "1.22.2", default-features = false, features = [
    "no_optimize",
    "no_module",
    "std",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
string-offsets = { version = "0.2.0", features = ["wasm"] }
test-log = "0.2.18"
thiserror = "2.0.12"
toml = { version = "0.9.2", features = ["preserve_order"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
smallvec = { version = "1.15.1", features = ["serde"] }
serde_spanned = "1.0.2"
toml_datetime = "0.7.2"
semver = { version = "1.0.27", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch="wasm")'.dependencies]
rhai = { version = "1.22.2", features = ["wasm-bindgen"] }
